# cb-tumblebug

./: .all-contributorsrc  .dockerignore  .env  .env.example  .gitignore  1.agent_protoc_build.sh  2.ssh_etcd.sh  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  docker-compose-custom.yaml  docker-compose.traefik.yaml  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  setup.env
init/: README.md  cleanDB.sh  decCredential.sh  init-openbao.sh  init.py  init.sh  initMetabase.sh  multi-init.sh  pyproject.toml  requirements.txt  template.credentials.yaml  unseal-openbao.sh
init/openbao/: openbao-config.hcl  openbao-init.sh  openbao-register-creds.py  openbao-register-creds.sh  openbao-unseal.sh  pyproject.toml
init/templates/: aws-small-web.json  aws-standard-vpc.json  aws-web-sg.json  default-sg.json  default-vnet.json  distributed-openstack-base.json  global-infra-template.json  global-mci-template.json  infra-across-global.json  infra-alibaba-global.json  infra-aws-ap-northeast-2-web.json  infra-aws-global.json  infra-aws-gpu-simple.json  infra-aws-multi-openstack-base.json  infra-azure-aws-llm-bench.json  infra-azure-global.json  infra-azure-llm-d-high.json  infra-gcp-global.json  infra-ibm-global.json  infra-kt-global.json  infra-ncp-global.json  infra-nhn-global.json  infra-openstack-global.json  infra-tencent-global.json  infra-usecase-aws-ap-northeast-2-web.json  infra-usecase-llm-bench.json  infra-usecase-llm-d-high.json  infra-usecase-multi-openstack-base.json  k8scluster-across.json  sg-aws-web.json  (+12 more)
(+2198 files in other folders)
